Change algorithm and add extra test
Теперь Ахо-Корасик возвращает не все индексы правил, найденных в строке, а все вхождения правила с наименьшим индексом среди найденных. Возвращает не только индекс правила, а также индекс вхождения в строку