@@ -13,17 +13,48 @@ public class MarkovTest {
     public void BasicTest() {
         List<String> keywords = Arrays.asList("he", "she", "his", "hers");
 
+        createMarkovFromList(keywords);
+
+        String text = "ushers";
+        Pair<Integer, Integer> match = markov.search(text);
+
+        List<Pair<Integer, Integer>> expectedMatches = List.of(new Pair<>(2, 0));
+        Pair<Integer, Integer> expectedMatch = expectedMatches.get(random.nextInt(1));
+        assertPairsAreEqual(expectedMatch, match);
+    }
+
+
+
+    private void createMarkovFromList(List<String> keywords) {
         for (int i = 0; i < keywords.size(); i++) {
             markov.insert(keywords.get(i), i);
         }
 
         markov.build();
+    }
 
-        String text = "ushers";
-        int match = markov.search(text);
+    private void assertPairsAreEqual(Pair<Integer, Integer> expected, Pair<Integer, Integer> actual) {
+        Assert.assertEquals(expected.first, actual.first);
+        Assert.assertEquals(expected.second, actual.second);
+    }
 
-        List<Integer> expectedMatches = List.of(1, 0, 3);
-        int expectedMatch = expectedMatches.get(random.nextInt(3));
-        Assert.assertEquals(expectedMatch, match);
+    @Test
+    public void RandomTest() {
+        List<String> keywords = Arrays.asList("he", "she", "his", "hers");
+
+        createMarkovFromList(keywords);
+
+        String text = "hehehehehe";
+        Pair<Integer, Integer> match = markov.search(text);
+
+        List<Pair<Integer, Integer>> expectedMatches = List.of(
+                new Pair<>(0, 0),
+                new Pair<>(2, 0),
+                new Pair<>(4, 0),
+                new Pair<>(6, 0),
+                new Pair<>(8, 0)
+        );
+        Pair<Integer, Integer> expectedMatch = expectedMatches.get(random.nextInt(5));
+        assertPairsAreEqual(expectedMatch, match);
     }
 }
